--- a/src/main/resources/templates/evento/eventoRendiconto.html
+++ b/src/main/resources/templates/evento/eventoRendiconto.html
@@ -298,7 +298,7 @@
 
 					});
 
-					$('#stocazzo').DataTable({
+					$('#tableXSLT').DataTable({
 						"bFilter" : false,
 						"bPaginate": false,
 						"bInfo" : false,
