--- a/src/main/resources/templates/comunicazione/comunicazioneList.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneList.html
@@ -68,9 +68,9 @@
 
 			    	$.fn.dataTable.moment('DD/MM/YYYY - HH:mm');
 					$('#datatable-comunicazione').DataTable({
-						"bFilter" : false,
+						"bFilter" : true,
 						"bInfo" : false,
-						"bPaginate" : false,
+						"bPaginate" : true,
 					});
 			     });
 
