mev riedizioni (primi 6 punti task: 10254)

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1494,3 +1494,11 @@ li.listStyle-elenco > label{
 .removeOption {
 	color: red !important;
 }
+
+table.dataTable tbody tr.selected {
+	background-color: #B0BED9 !important;
+}
+
+.modal-body{
+	min-height: 150px;
+}
