--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -30,6 +30,39 @@
 				</div>
 			</div>
 
+			<!-- modale per spostare (slittare) orario attività in blocco -->
+			<div id="modale-sposta-orario" class="modal fade" data-model-index="1" role="dialog">
+				<div class="modal-dialog modal-md">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+							</button>
+							<h4 class="modal-title" id="myModalLabel1" th:text="#{label.slittamento_orario_attivita}"></h4>
+						</div>
+						<div class="modal-body">
+							<div class="alert alert-warning" th:text="#{label.disclaimer_modalita_spostamento_orario}"></div>
+
+							<div class="item form-group with-margin-top alert-js" id="item-spostamento">
+								<label class="control-label col-md-1 col-sm-2 col-xs-3" for="orarioSpostamento">
+									<span th:text="#{label.orario}">Orario</span>
+								</label>
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group ora">
+									<input type="text" required="required" class="form-control" id="orarioSlittamentoBlocco"/>
+									<span class="input-group-addon openClock">
+    									<i class="glyphicon glyphicon-time"></i>
+ 									</span>
+								</div>
+							</div>
+
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-success pull-right" th:text="#{label.sposta}" onclick="spostaSelezionati()"></button>
+							<button type="button" class="btn btn-primary pull-right" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<!-- finestra modale di aggiunta attivitaRES a programma del Giorno -->
 			<div id="add-attivitaRES-modal" class="modal fade modal-add-attivitaRES" data-model-index="4" role="dialog">
 				<div class="modal-dialog modal-lg">
@@ -59,10 +92,10 @@
 												<span th:text="#{label.orario_inizio}">Orario Fine</span>
 												<span class="required">*</span>
 											</label>
-											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group" id="razionale">
-												<input type="text" required="required" class="form-control ora"
+											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group ora" id="razionale">
+												<input type="text" required="required" class="form-control"
 													th:field="${eventoWrapper.tempAttivitaRES.orarioInizio}" th:disabled="${isRiedizione or isEditSemiBloccato}" />
-													<span class="input-group-addon openClock" onclick="openClock(this)">
+													<span class="input-group-addon openClock">
 		     											<i class="glyphicon glyphicon-time"></i>
 		  											</span>
 											</div>
@@ -74,10 +107,10 @@
 												<span th:text="#{label.orario_fine}">Orario Fine</span>
 												<span class="required">*</span>
 											</label>
-											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group" id="razionale">
-												<input type="text" required="required" class="form-control ora"
+											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group ora" id="razionale">
+												<input type="text" required="required" class="form-control"
 													th:field="${eventoWrapper.tempAttivitaRES.orarioFine}" th:disabled="${isRiedizione or isEditSemiBloccato}" />
-													<span class="input-group-addon openClock" onclick="openClock(this)">
+													<span class="input-group-addon openClock">
 		     											<i class="glyphicon glyphicon-time"></i>
 		  											</span>
 											</div>
@@ -220,7 +253,7 @@
 				<!--  TODO RIMUOVERE NUMERAZIONE HARDCODATA E METTERLA IN UN ENUM?  -->
 
 				<form id="formEventoRES" class="form-horizontal form-label-left form-evento"
-					method="post" enctype="multipart/form-data" th:action="@{|/provider/${eventoWrapper.evento.provider.id}/evento/validate|}"
+					method="post" enctype="multipart/form-data" th:action="@{|/provider/${eventoWrapper.providerId}/evento/validate|}"
 					novalidate="novalidate">
 
 					<!-- input hidden -->
@@ -859,8 +892,8 @@
 											</label>
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 												<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, brochure, null, null, null, false, null, false)" ></th:block> -->
-												<th:block th:unless="${isRiedizione or isEditSemiBloccato}" th:include="fragments/allegatiext :: allegatiext(eventoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_BROCHURE_EVENTO}', brochure, null, null, null, false, 'edit', false)" ></th:block>
-												<th:block th:if="${isRiedizione or isEditSemiBloccato}">
+												<th:block th:unless="${isEditSemiBloccato}" th:include="fragments/allegatiext :: allegatiext(eventoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_BROCHURE_EVENTO}', brochure, null, null, null, false, 'edit', false)" ></th:block>
+												<th:block th:if="${isEditSemiBloccato}">
 													<div class="value-edit" th:if="${eventoWrapper.evento.brochureEvento != null}"><i class="fa fa-download"> </i> <a th:text="${eventoWrapper.evento.brochureEvento.nomeFile}" th:href="@{|/file/${eventoWrapper.evento.brochureEvento.id}|}"></a></div>
 													<div class="value-edit danger" th:unless="${eventoWrapper.evento.brochureEvento != null}" th:text="#{label.allegato_non_inserito}"></div>
 												</th:block>
@@ -1604,7 +1637,6 @@
 						});
 					});
 
-
 					//da approfondire
 				    /*
 					$('#dataIntermedia').on('apply.daterangepicker', function(ev, picker) {
@@ -1628,10 +1660,6 @@
 				        'default': 'now'
 				    });
 
-					function openClock(caller){
-						$(caller).parent().click();
-					}
-
 					//init per provincia e comune della sede
 					initProvinciaComune('provincia', 'comune');
 
@@ -1641,6 +1669,11 @@
 						initProvinciaComune('provprog' + $sel.data("programma-provincia"), 'comprog' + $sel.data("programma-provincia"));
 					})
 
+					//resetta la variabile di appoggio
+					$("#modale-sposta-orario").on("hidden.bs.modal", function() {
+						tempTable = null;
+					})
+
 				}
 
 				//eventLister cambio tab
@@ -1648,6 +1681,93 @@
 			    	tabSelected = e.target.id;
 					reloadSection(tabSelected);
 				});
+
+				function openClock(caller){
+					console.log($(caller).prev().attr("class"))
+					$(caller).prev().trigger("click");
+				}
+
+				//seleziona tutte le attività
+				function selezionaTutteAttivita(table) {
+					var $table = $(table);
+					if ($table.hasClass('all-selected')) {
+			            $table.removeClass('all-selected');
+			            $table.find('tbody tr').removeClass("selected");
+			        }
+			        else {
+			            $table.addClass('all-selected');
+			            $table.find('tbody tr').addClass("selected");
+			        }
+				}
+
+				//variabile di appoggio per la tabella selezionata
+				var tempTable;
+
+				function openModaleSpostaOrario(table) {
+					tempTable = table;
+					$("#modale-sposta-orario").modal("show");
+				}
+
+				function closeModaleSpostaOrario() {
+					$("#modale-sposta-orario").modal("hide");
+					$("#orarioSlittamentoBlocco").val("")
+				}
+
+				//funzione che sposta tutti gli orari di inizio e di fine
+				function spostaSelezionati() {
+					var ora = $("#orarioSlittamentoBlocco").val();
+					var $table = $(tempTable);
+					var $selezionati = $table.find('tr.selected');
+					console.log($selezionati);
+					console.log(ora);
+					if(!moment(ora, "HH:mm").isValid()) {
+						//errore validazione
+						$("#item-spostamento").addClass('bad');
+						$("#item-spostamento").append($("<div class='alert col-xs-3'></div>").text([[#{label.orario_non_valido}]]));
+					}
+					else {
+						var programmaId = $table.parents(".div-programma-id").attr("data-programma-id");
+						var listaRowId = new Array();
+						$.each($selezionati, function(i,v) {
+							$v = $(v);
+							listaRowId.push($v.attr("data-row-id"));
+						})
+						console.log(listaRowId.length);
+						if(listaRowId.length == 0) {
+							//errore validazione
+							$("#item-spostamento").addClass('bad');
+							$("#item-spostamento").append($("<div class='alert col-xs-3'></div>").text([[#{label.nessun_attivita_selezionata}]]));
+						}
+						else {
+							var url = [[@{|/provider/${eventoWrapper.providerId}/evento/${eventoWrapper.evento.id}/updateOrari|}]];
+							var token = [[${_csrf.token}]];
+							var header = [[${_csrf.headerName}]];
+							var dataSend = JSON.stringify({programmaId: programmaId, listaRowId: listaRowId, ora: ora});
+							$.ajax({
+		                        type: "POST",
+		                        url: url,
+// 		                        dataType : 'json',
+		                		timeout : 100000,
+		                		data: dataSend,
+		                		contentType: "application/json; charset=utf-8",
+		                        beforeSend: function(xhr) {
+		                            xhr.setRequestHeader(header, token);
+		                        },
+		                        success: function(data) {
+		                        	$('#attivitaRES').empty().html(data);
+		                        	console.log(data);
+								  	reInitComponents();
+								  	closeModaleAddAttivitaTo();
+								  	reInitDataTableByClass("datatable-responsive-programmaRES");
+								  	closeModaleSpostaOrario();
+		                        },
+		                        error: function(request, status, error) {
+		                            alert(error);
+		                        }
+		                    });
+						}
+					}
+				}
 
 				//funzione che aggiunge una data intermedia, aumenta il name in base alle date già presenti
 				function aggiungiDataIntermedia(caller, target) {
@@ -2129,6 +2249,7 @@
 						reInitModaleAddAttivita();
 // 						$('#add-attivita').click();
 						openAddAttivitaTo(target,programmaIndex,extraType,modificaElemento,false);
+						$(".modal-add-attivitaRES").modal("show");
 					  })
 				  	.fail(function() {
 				    	alert( "error" );
