--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -49,7 +49,7 @@
 
 							<input id="submitButtonScadenze" type="submit" style="display: none;" />
 							<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-							<input th:if="${scadenzeEventoWrapper.returnLink == null}" type="hidden" th:value="${#httpServletRequest.requestURI}" name="returnLink" />
+							<input th:if="${scadenzeEventoWrapper.returnLink == null}" type="hidden" th:value="${#strings.substring(#httpServletRequest.requestURI,#strings.indexOf(#httpServletRequest.requestURI,#httpServletRequest.contextPath) + #strings.length(#httpServletRequest.contextPath))}" name="returnLink" />
 							<input th:unless="${scadenzeEventoWrapper.returnLink == null}" type="hidden" th:field="${scadenzeEventoWrapper.returnLink}" />
 
 						</form>
