--- a/src/main/resources/templates/provider/providerList.html
+++ b/src/main/resources/templates/provider/providerList.html
@@ -238,12 +238,13 @@
 									<span th:text="#{label.motivazione}"></span>
 									<span class="required">*</span>
 								</label>
-								<div class="col-lg-6 col-md-5 col-sm-4 col-xs-12">
+								<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 									<div class="radio">
 										<label>
 											<input type="radio" class="flat decadenza-radio" th:field="${impostazioniProviderWrapper.motivazioneDecadenza}" th:value="${T(it.tredi.ecm.dao.enumlist.MotivazioneDecadenzaEnum).SCADENZA_INSERIMENTO_DOMANDA_STANDARD}" />
 											<span th:text="${T(it.tredi.ecm.dao.enumlist.MotivazioneDecadenzaEnum).SCADENZA_INSERIMENTO_DOMANDA_STANDARD.nome}">Sì</span>
 										</label>
+										<a id="linkPdfDecreto" th:text="'(' + #{label.genera_decreto} +')'" th:href="@{|/|}"></a>
 									</div>
 									<div class="radio">
 										<label>
@@ -257,6 +258,7 @@
 							<div class="divider"></div>
 							<div class="item form-group with-margin-top" th:classappend="${#fields.hasErrors('impostazioniProviderWrapper.allegatoDecadenza')} ? 'bad'">
 								<th:block th:include="fragments/allegatiext :: allegatiext(impostazioniProviderWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_DECADENZA}', allegatoDecadenza, null, null, null, true, 'edit', true)"></th:block>
+								<!--a id="linkPdfDecreto" class="btn btn-primary pull-right with-margin-top" th:text="#{label.genera_decreto}" th:href="@{|/|}"></a-->
 							</div>
 
 							<input id="submitButtonBlocca" type="submit" style="display: none;" />
@@ -435,6 +437,7 @@
 
 				function openModalConfermaBloccoProvider(idProvider) {
 					$("#form-blocca-provider").attr("action", [[@{|/provider/|}]] + idProvider + "/blocca");
+					$('#linkPdfDecreto').attr("href", [[@{|/provider/|}]] + idProvider + "/decreto_decadenza/pdf");
 					$("#form-blocca-provider")[0].reset();
 					$('input[type="radio"]').each(function(i,r) {
 						$r = $(r);
